css/style.css
* {
    margin: 0;
    padding: 0;
}

body {
    background-color: #f4f4f4;
    font-family: 'Open Sans', sans-serif;
}


/*
 _   _             _                
| \ | |           | |               
|  \| | __ ___   _| |__   __ _ _ __ 
| . ` |/ _` \ \ / / '_ \ / _` | '__|
| |\  | (_| |\ V /| |_) | (_| | |   
|_| \_|\__,_| \_/ |_.__/ \__,_|_|   

*/

#header {
    width: 100%;
    height: 70px;
    background-color: #e70012;
    position: sticky;
    top: 0px;
    z-index: 10;
    border: 1px solid #bf0010;
}

.header-container {
    width: 96%;
    height: 100%;
    margin: 0 auto;
    display: flex;
    flex-direction: row;
    align-items: center;
}

.link-logo {
    width: 103px;
    height: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.link-logo svg {
    color: white;
    width: 100%;
    height: 100%;
    fill: #FFF;
}

.navItems-container {
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: flex-end;
}

.item-navbar {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    color: #FFF;
    margin-right: 25px;
    cursor: pointer;
}

.svg-container__navbar {
    height: 28px;
    width: 28px;
}

.svg-container__navbar svg {
    height: 100%;
    width: 100%;
    fill: #FFF;
}

.item-navbar p {
    font-size: 10px;
    margin-top: 2px;
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    overflow: hidden;
}

.panier {
    width: 35.5px;
    height: 28px;
}


/* 
              _     _      
    /\       (_)   | |     
   /  \   ___ _  __| | ___ 
  / /\ \ / __| |/ _` |/ _ \
 / ____ \\__ \ | (_| |  __/
/_/    \_\___/_|\__,_|\___|

*/

aside {
    position: fixed;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    height: 93.5%;
    background-color: #bf0010;

}

.aside-container {
    width: 88px;
    background-color: #e70012;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.item-aside {
    height: 88px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border: 1px solid #bf0010;
}

.item-aside p {
    font-size: 11px;
    margin-top: 10px;
    font-family: 'Open Sans', sans-serif;
    font-weight: bold;
    overflow: hidden;
    color: #fff;
    text-align: center;
}

.svg-container__aside {
    height: 28px;
    width: 28px;
}

.svg-container__aside svg {
    height: 100%;
    width: 100%;
    fill: #FFF;
}

.more {
    text-align: center;
    color: #FFF;
    font-size: 25px;
}

.litle-container-aside {
    height: 64px;
}

.go-up {
    height: 103px;
    width: 100%;
    background-color: #bf0010;
    border: 1px solid black;
}

.white-arrow {
    background: #fff;
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    display: block;
    height: 38px;
    padding: 2px;
    width: 28px;
    margin: 0 auto;
    display: flex;
    justify-content: center;
    align-items: center;
}


/* 
_____ __  __          _____ ______  _____ 
|_   _|  \/  |   /\   / ____|  ____|/ ____|
  | | | \  / |  /  \ | |  __| |__  | (___  
  | | | |\/| | / /\ \| | |_ |  __|  \___ \ 
 _| |_| |  | |/ ____ \ |__| | |____ ____) |
|_____|_|  |_/_/    \_\_____|______|_____/ 
                                           
*/

.container-image {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    grid-gap: 5px;
    grid-auto-rows: auto;
    padding: 5px;
    width: 71.2%;
    margin-left: 89px;
}

.allImage {
    border-radius: 5px;
    background-position: center;
    background-size: cover;
    height: 23vw;
    transition: transform 0.3s;
}

.allImage:hover {
    transform: translate(0px, -0.29vw)
}

.twoRow {
    height: 46.3vw;
}

.kirby {
    background-image: url("/images/Kirby.jpg");
    grid-column: 1 / 3;
    grid-row: 1 / 3;
}

.kirby2 {
    background-image: url("/images/Kirby2.jpg");
    grid-column: 3 / 5;
    grid-row: 1;
}

.arceus {
    background-image: url("/images/Arceus.jpg");
    grid-column: 5 / 7;
    grid-row: 1;
}

.pokemonDEPS {
    background-image: url("/images/PokeDEPS.jpg");
    grid-column: 3 / 7;
    grid-row: 2;
}

.party {
    background-image: url("/images/MarioParty.jpg");
    grid-column: 1 / 3;
    grid-row: 3;
}

.metroid {
    background-image: url("/images/Metroid.jpg");
    grid-column: 3 / 5;
    grid-row: 3;
}

.cerebral {
    background-image: url("/images/Cerebral.jpg");
    grid-column: 5 / 7;
    grid-row: 3;
}

.animal {
    background-image: url("/images/Animal.jpg");
    grid-column: 1/4;
    grid-row: 4;
}

.animal2 {
    background-image: url("/images/Animals2.jpg");
    grid-column: 4 / 7;
    grid-row: 4;
}

.online {
    background-image: url("/images/Online.jpg");
    grid-column: 1 / 3;
    grid-row: 5 / 7;
}

.oled {
    background-image: url("/images/Oled.jpg");
    grid-column: 3 / 5;
    grid-row: 5;
}

.gp {
    background-image: url("/images/Gp.jpg");
    grid-column: 5 / 7;
    grid-row: 5;
}

.triangle {
    background-image: url("/images/Triangle.jpg");
    grid-column: 3 / 7;
    grid-row: 6;
}

.kart {
    background-image: url("/images/MarioKart.jpg");
    grid-column: 1 / 3;
    grid-row: 7 / 9;
}

.animal3 {
    background-image: url("/images/AnimalPocket.jpg");
    grid-column: 3 / 5;
    grid-row: 7;
}

.pikmin {
    background-image: url("/images/Pikmin.jpg");
    grid-column: 5/ 7;
    grid-row: 7;
}

.fire {
    background-image: url("/images/FireEmblem.jpg");
    grid-column: 3/ 7;
    grid-row: 8;
}

.store {
    background-image: url("/images/MyNintendo.jpg");
    grid-column: 1 / 7;
    grid-row: 9 / 11;
    height: 34vw;
}

.crossing {
    height: 17vw;
}


/* 
      _       _     _               _     _      
     (_)     | |   | |             (_)   | |     
 _ __ _  __ _| |__ | |_    __ _ ___ _  __| | ___ 
| '__| |/ _` | '_ \| __|  / _` / __| |/ _` |/ _ \
| |  | | (_| | | | | |_  | (_| \__ \ | (_| |  __/
|_|  |_|\__, |_| |_|\__|  \__,_|___/_|\__,_|\___|
         __/ |                                   
        |___/                                     
*/

.container {
    display: flex;
    flex-direction: row;
}

.right-aside {
    width: 22.3vw;
}

.right-aside__container {
    margin-bottom: 4px;
    margin-top: 5px;
}

.section-title {
    /* height: 58px; */
    background: #fff;
    margin-bottom: 4px;
    padding: 12px;
    font-family: Arial, Helvetica, sans-serif;
}

.section-title p {
    border-left: 4px solid #f4f4f4;
    font-size: 1.143rem;
    padding: 8px;
}

.card-news {
    background: #fff;
    margin-bottom: 4px;
    padding: 12px;
    display: flex;
    flex-direction: row;
}

.img-container {
    width: 12.5vw;
}

.img-container img {
    width: 100%;
}

.textRight-container {
    padding: 2px 9px;
    font-family: Arial, Helvetica, sans-serif;
    width: 21vw;
}

.textRight-container a h4 {
    font-family: Arial, Helvetica, sans-serif;
    margin-bottom: 4px;
}

.textRight-container .date,
.textRight-container .descriptionSoon {
    font-size: 11px;
    color: gray;
    margin-bottom: 8px;
}

.textRight-container .description {
    font-size: .9286rem;
    color: #666666;
}

.moreInfos {
    /* height: 58px; */
    background: #fff;
    margin-bottom: 4px;
    padding: 12px;
    font-family: Arial, Helvetica, sans-serif;
    display: flex;
    justify-content: flex-end;
    margin-bottom: 12px;
}

.moreInfos p {
    font-size: 1rem;
    font-weight: 600;
}

.svgChevron {
    height: 10px;
    margin-left: 5px;
}

.svgChevron svg {
    height: 100%;
}

.red {
    color: #df3644;
}

.red svg {
    fill: #df3644
}


/* ----------------------------------Footer------------------------ */

footer {
    width: 71%;
    margin-left: 95px;
}

.social {
    height: 57px;
    width: 100%;
    background-color: black;
    margin: 3vw 0;
    grid-column: 1 / 7;
    grid-row: 11;
    color: #fff;
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

.social svg {
    fill: #fff;
}

.socialButton {
    padding: 12px 48px;
    border-radius: 4px;
    height: 11px;
    display: flex;
    align-items: center;
    padding-right: 79px;
}

.socialButton-container {
    display: flex;
    flex-direction: row;
}

.facebook {
    background-color: #3b5999;
    margin-right: 10px;
}

.twitter {
    background-color: #55acef;
}

.facebook-image {
    height: 13px;
}

.shareTexte p {
    font-size: large;
    text-transform: uppercase;
    font-size: 2.5rem;
    font-weight: bold;
}

.panel-container {
    color: #fff;

}

.panel-title {
    display: flex;
    width: 100%;
    background-color: #e70012;
    height: 49px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;

}

.logoNintendo {
    height: 24px;
    margin: 12px 0;
    margin-left: 15px;
    width: auto;
}

.panel-title svg {
    fill: #FFF;
    width: 96px;
    height: 24px;
    position: relative;
    margin: 0 40px 0 0;
    top: 0px;
    left: 0px;
    float: left;
}

.dropdownFake {
    height: 63%;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #bf0010;
    padding: 0 13px;
    margin: auto 0;
    font-size: 14px;
    font-weight: 800;
    border-radius: 3px;
}

.panel-footer {
    background-color: #bf0010;
    padding: 12px 20px 24px;
}

.links{
    display: flex;
    flex-direction: row;
    font-weight: 800;
}

.links p {
    margin-right: 24px;
}

.links2{
    display: flex;
    flex-direction: row;
    margin: 12px auto;
}

.links2 p {
    margin-right: 24px;
}

.copyright-container {
    float: right;
    text-align: left;
    position: relative;
    font-size: 12px;
}

